--- a/public/loading.html
+++ b/public/loading.html
@@ -2,59 +2,230 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
+  <title>AI 헤어 스타일 분석 중...</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>AI 스타일 분석 중...</title>
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(180deg, #b388ff, #7c4dff, #5e35b1);
-      font-family: Pretendard, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      color: white;
+    :root {
+      --purple-top: #a855f7;
+      --purple-mid: #ec4899;
+      --purple-bottom: #f97316;
+      --card-bg: rgba(15, 23, 42, 0.96);
+      --text-main: #f9fafb;
+      --text-sub: #cbd5f5;
     }
 
-    .container {
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+
+    body {
+      font-family: "Pretendard", -apple-system, BlinkMacSystemFont, system-ui, sans-serif;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 16px;
+      background:
+        radial-gradient(circle at top left, rgba(255,255,255,0.18), transparent 55%),
+        linear-gradient(180deg, var(--purple-top), var(--purple-mid), var(--purple-bottom));
+      color: var(--text-main);
+    }
+
+    .frame {
+      width: 100%;
+      max-width: 460px;
+      border-radius: 28px;
+      padding: 2px;
+      background: linear-gradient(135deg,
+        rgba(255,255,255,0.75),
+        rgba(148,163,255,0.4),
+        rgba(15,23,42,0.6));
+      box-shadow: 0 22px 70px rgba(15, 23, 42, 0.8);
+    }
+
+    .inner {
+      border-radius: 26px;
+      background: var(--card-bg);
+      padding: 22px 16px 18px;
       text-align: center;
-      padding: 20px;
+    }
+
+    h1 {
+      font-size: 1.4rem;
+      font-weight: 800;
+      letter-spacing: -0.04em;
+      margin-bottom: 6px;
+    }
+
+    p {
+      font-size: 0.95rem;
+      color: var(--text-sub);
+      margin-bottom: 18px;
+    }
+
+    .spinner-wrap {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 12px;
+      margin-bottom: 8px;
     }
 
     .spinner {
-      width: 70px;
-      height: 70px;
-      border: 6px solid rgba(255, 255, 255, 0.3);
-      border-top-color: #ffffff;
-      border-radius: 50%;
-      animation: spin 1.1s linear infinite;
-      margin: 0 auto 18px;
+      width: 46px;
+      height: 46px;
+      border-radius: 999px;
+      border: 4px solid rgba(148,163,255,0.3);
+      border-top-color: #f97316;
+      animation: spin 1s linear infinite;
     }
 
     @keyframes spin {
       to { transform: rotate(360deg); }
     }
 
-    .text {
-      font-size: 1.1rem;
-      opacity: 0.9;
-      margin-top: 10px;
+    .status-text {
+      font-size: 0.95rem;
+    }
+
+    .status-sub {
+      font-size: 0.85rem;
+      color: var(--text-sub);
+    }
+
+    .error-box {
+      margin-top: 14px;
+      border-radius: 14px;
+      border: 1px solid rgba(248, 113, 113, 0.8);
+      background: rgba(127, 29, 29, 0.9);
+      padding: 10px 12px;
+      font-size: 0.85rem;
+      display: none;
+      text-align: left;
+      line-height: 1.5;
+    }
+
+    .btn-row {
+      margin-top: 18px;
+      display: flex;
+      gap: 10px;
+      justify-content: center;
+    }
+
+    button {
+      border: none;
+      border-radius: 999px;
+      padding: 10px 16px;
+      font-size: 0.9rem;
+      font-family: inherit;
+      cursor: pointer;
+      white-space: nowrap;
+    }
+
+    .btn-primary {
+      background: linear-gradient(135deg, #fb923c, #f97316, #6366f1);
+      color: #fff;
+      font-weight: 700;
+      display: none;
+    }
+
+    .btn-ghost {
+      background: rgba(15,23,42,0.85);
+      border: 1px solid rgba(148,163,255,0.7);
+      color: var(--text-sub);
+      display: none;
     }
   </style>
+</head>
+<body>
+  <div class="frame">
+    <div class="inner">
+      <h1>AI가 헤어스타일을 만드는 중이에요</h1>
+      <p>업로드한 사진을 바탕으로 어울리는 헤어스타일 3가지를 생성하고 있어요.</p>
+
+      <div class="spinner-wrap" id="spinnerArea">
+        <div class="spinner"></div>
+        <div class="status-text" id="statusText">이미지 생성 중...</div>
+        <div class="status-sub">보통 5~15초 정도 걸릴 수 있습니다.</div>
+      </div>
+
+      <div class="error-box" id="errorBox"></div>
+
+      <div class="btn-row">
+        <button class="btn-ghost" id="btnToHome">사진 다시 선택하기</button>
+        <button class="btn-primary" id="btnRetry">다시 시도하기</button>
+      </div>
+    </div>
+  </div>
 
   <script>
-    // 2~3초 후 자동 결과 페이지 이동
-    setTimeout(() => {
-      window.location.href = "result.html";
-    }, 2200);
-  </script>
-</head>
+    const statusText = document.getElementById("statusText");
+    const errorBox = document.getElementById("errorBox");
+    const spinnerArea = document.getElementById("spinnerArea");
+    const btnRetry = document.getElementById("btnRetry");
+    const btnToHome = document.getElementById("btnToHome");
 
-<body>
-  <div class="container">
-    <div class="spinner"></div>
-    <div class="text">AI가 나에게 어울리는 헤어스타일을 분석하고 있어요...</div>
-  </div>
+    btnToHome.addEventListener("click", () => {
+      window.location.href = "index.html";
+    });
+
+    btnRetry.addEventListener("click", () => {
+      errorBox.style.display = "none";
+      btnRetry.style.display = "none";
+      spinnerArea.style.display = "flex";
+      statusText.textContent = "이미지 생성 중...";
+      callHairPreview();
+    });
+
+    async function callHairPreview() {
+      const base64 =
+        localStorage.getItem("image_base64") ||
+        localStorage.getItem("hair_image_base64");
+
+      if (!base64) {
+        showError("이전 페이지에서 사진 정보를 찾을 수 없습니다. 처음 화면으로 돌아가 다시 시도해 주세요.");
+        return;
+      }
+
+      try {
+        const res = await fetch("/api/hair-preview", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({
+            image_base64: base64,
+            gender: "여성",       // 나중에 옵션 생기면 여기서 바꾸면 됨
+            base_style: "중간 길이",
+          }),
+        });
+
+        if (!res.ok) {
+          throw new Error("서버 오류 코드: " + res.status);
+        }
+
+        const json = await res.json();
+
+        if (!json.success || !Array.isArray(json.styles) || json.styles.length === 0) {
+          throw new Error(json.message || "이미지 생성 결과가 비어 있습니다.");
+        }
+
+        // 결과 저장 후 result.html로 이동
+        localStorage.setItem("hair_preview_result", JSON.stringify(json));
+        window.location.href = "result.html";
+      } catch (err) {
+        console.error(err);
+        showError("AI 스타일 생성 중 오류가 발생했습니다.\n잠시 후 다시 시도해 주세요.\n\n(" + err.message + ")");
+      }
+    }
+
+    function showError(msg) {
+      spinnerArea.style.display = "none";
+      errorBox.style.display = "block";
+      errorBox.textContent = msg;
+      btnRetry.style.display = "inline-flex";
+      btnToHome.style.display = "inline-flex";
+    }
+
+    document.addEventListener("DOMContentLoaded", () => {
+      callHairPreview();
+    });
+  </script>
 </body>
 </html>
