--- a/public/loading.html
+++ b/public/loading.html
@@ -101,6 +101,7 @@
       display: none;
       text-align: left;
       line-height: 1.5;
+      white-space: pre-wrap; /* 줄바꿈 유지 */
     }
 
     .btn-row {
@@ -196,11 +197,27 @@
           }),
         });
 
-        if (!res.ok) {
-          throw new Error("서버 오류 코드: " + res.status);
+        // 🔍 응답 바디를 먼저 문자열로 읽고 나서 JSON 시도
+        const text = await res.text();
+        let json = null;
+        try {
+          json = JSON.parse(text);
+        } catch (e) {
+          // JSON 파싱 실패해도 그대로 둔다 (text 그대로 에러 메시지로 쓸 수 있게)
         }
 
-        const json = await res.json();
+        if (!res.ok) {
+          const msg =
+            (json && (json.message || json.error)) ||
+            text ||
+            ("서버 오류 코드: " + res.status);
+          throw new Error(msg);
+        }
+
+        // 200인데 json이 없으면 방어적으로 비워둠
+        if (!json) {
+          json = {};
+        }
 
         if (!json.success || !Array.isArray(json.styles) || json.styles.length === 0) {
           throw new Error(json.message || "이미지 생성 결과가 비어 있습니다.");
@@ -211,7 +228,10 @@
         window.location.href = "result.html";
       } catch (err) {
         console.error(err);
-        showError("AI 스타일 생성 중 오류가 발생했습니다.\n잠시 후 다시 시도해 주세요.\n\n(" + err.message + ")");
+        showError(
+          "AI 스타일 생성 중 오류가 발생했습니다.\n잠시 후 다시 시도해 주세요.\n\n" +
+          String(err.message || err)
+        );
       }
     }
 
